// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it renders 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 16px;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
  size="lg"
/>
`;

exports[`Input it renders an input element with a really large padding and margin 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  margin: 32px;
  padding: 32px;
  font-size: 16px;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
  size="lg"
/>
`;

exports[`Input it renders an input element with a red border with a color prop is passed 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c00;
  font-size: 16px;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #c00;
  box-shadow: 0 0 0 2px #c00;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  color="red"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
  size="lg"
/>
`;

exports[`Input it renders an input element with large text 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  font-size: 24px;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

<input
  className="c0"
  fontSize={4}
  id="fake-test-id"
  size="lg"
/>
`;
